# s3-sync-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: latest.yml  publish.yml
config_example/: configs.json
src/: main.rs  mqtt_client.rs
