[package]
name = "s3-sync-rs"
version = "2023.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.5", features = ["env-filter", "time", "local-time"] }
tokio = { version = "1.27.0", features = ["rt","macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.12", features = ["fs"] }
aws-sdk-s3 = "0.26.0"
aws-config = "0.55.1"
aws-smithy-types = "0.55.1"
aws-smithy-http = { version = "0.55.1" }
time = { version = "0.3.20", features = ["formatting", "local-offset", "macros"] }
chrono = "0.4.24"
cron = "0.12.0"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true # Link Time Optimization (LTO)
codegen-units = 1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort' # removes the need for this extra unwinding code.
strip = "symbols"
