[package]
name = "s3-sync-rs"
version = "2023.3.1"
edition = "2021"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "time",
  "local-time",
] }
tokio = { version = "1.29.1", features = ["rt", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
aws-sdk-s3 = "0.31.2"
aws-config = "0.56.1"
aws-smithy-types = "0.56.1"
aws-smithy-http = { version = "0.56.1" }
time = { version = "0.3.29", features = [
  "formatting",
  "local-offset",
  "macros",
] }
chrono = "0.4.31"
cron = "0.12.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
paho-mqtt = { version = "0.12.2", default-features = false, features = [
  "bundled",
] }
lazy_static = "1.4.0"


[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Link Time Optimization (LTO)
codegen-units = 1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort'   # removes the need for this extra unwinding code.
strip = "symbols"
